# packaging

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  SECURITY.md  SECURITY.rst  asv.conf.json  dev-requirements.txt  factory.md  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.factory/: config.json  eval_profile.json
.github/workflows/: codeql.yml  docs.yml  lint.yml  packaging.yml  perf.yml  publish.yml  release.yml  test-cpython.yml  test-pypy.yml  test.yml
benchmarks/: __init__.py  dist_sample.txt  markers.py  requirement.py  resolver.py  specifiers.py  specs.py  specs_sample.txt  utils.py  version.py  version_sample.txt  versions.py
docs/: Makefile  changelog.rst  conf.py  dependency_groups.rst  direct_url.rst  errors.rst  filenames.rst  index.rst  licenses.rst  markers.rst  metadata.rst  pylock.rst  ranges.rst  requirements.rst  requirements.txt  security.rst  specifiers.rst  tags.rst  utils.rst  version.rst  wheelfile.rst
docs/development/: getting-started.rst  index.rst  release-process.rst  reviewing-patches.rst  submitting-patches.rst
eval/: benchmark.py  score.py
packaging/: _AIX_platform.py  __about__.py  __init__.py  _aix_support.py  _compat.py  _elffile.py  _manylinux.py  _musllinux.py  _parser.py  _structures.py  _tokenizer.py  _typing.py  markers.py  metadata.py  requirements.py  specifiers.py  tags.py  utils.py  version.py
packaging/metadata/: __init__.py  _parse.py  _raw.py  _types.py  _utils.py  _validation.py  constants.py  raw.py
packaging/repositories/: __init__.py  _utils.py  base.py  filters.py  legacy.py  wrappers.py
packaging/transports/: __init__.py  base.py  requests.py  wrappers.py
src/packaging/: __init__.py  _elffile.py  _manylinux.py  _musllinux.py  _parser.py  _pyproject.py  _range_utils.py  _ranges.py  _spdx.json  _structures.py  _tokenizer.py  _types.py  _typing.py  _version_utils.py  dependency_groups.py  direct_url.py  errors.py  filenames.py  markers.py  metadata.py  project.py  project_table.py  pylock.py  ranges.py  record.py  requirements.py  specifiers.py  tags.py  utils.py  version.py  wheelfile.py
src/packaging/_vendor/: boolean.pyi  license_expression.pyi  vendor.txt
src/packaging/_vendor/boolean/: __init__.py  boolean.py  test_boolean.py
src/packaging/_vendor/license_expression/: __init__.py  _pyahocorasick.py
src/packaging/_vendor/license_expression/data/: license_key_index.json.ABOUT  scancode-licensedb-index.json
src/packaging/licenses/: __init__.py  _spdx.py  spdx.py
stubs/: platform.pyi
tasks/: __init__.py  check.py  check_frozen_revs.py  licenses.py  paths.py  pickle_compat.py  requirements.txt  select_pypi_dist.py  select_pypi_specs.py  select_pypi_versions.py
tests/: __init__.py  conftest.py  hello-world.c  metadata_examples.csv  requirements.txt  test_dependency_groups.py  test_direct_url.py  test_elffile.py  test_errors.py  test_filenames.py  test_issue_1000.py  test_licenses.py  test_manylinux.py  test_markers.py  test_metadata.py  test_musllinux.py  test_project.py  test_project_rfc822.py  test_project_table.py  test_pylock.py  test_pylock_select.py  test_ranges.py  test_requirements.py  test_specifiers.py  test_structures.py  test_tags.py  test_utils.py  test_version.py  test_version_cli.py  test_wheelfile.py
tests/manylinux/: build.sh  hello-world-invalid-magic.license
tests/metadata/: 2_1_pkginfo_string.txt  everything.metadata  test_metadata.py  test_metadata_constants.py
tests/musllinux/: build.sh
tests/project/dynamic-description/: pyproject.toml
tests/project/full-metadata/: README.md  pyproject.toml
tests/project/full-metadata2/: LICENSE  pyproject.toml
tests/project/metadata-2.5/: pyproject.toml
tests/project/spdx/: pyproject.toml
tests/project/unknown-readme-type/: README.just-made-this-up-now  pyproject.toml
tests/property/: strategies.py  test_ranges_cross_epoch.py  test_ranges_pep440_extended.py  test_ranges_pubgrub.py  test_ranges_set_algebra.py  test_ranges_set_relations.py  test_ranges_to_specifier_set.py  test_specifier_comparison.py  test_specifier_extended.py  test_specifier_implied.py  test_specifier_matching.py  test_version_cmpkey.py  test_version_format.py  test_version_normalization.py  test_version_ordering.py  test_version_releases.py
tests/pylock/: pylock.spec-example.toml
