[build-system]
requires = ["flit_core >=3.12"]
build-backend = "flit_core.buildapi"


[project]
name = "packaging"
description = "Core utilities for Python packages"
dynamic = ["version"]
license = "Apache-2.0 OR BSD-2-Clause"
readme = "README.rst"
requires-python = ">=3.8"
authors = [{name = "Donald Stufft", email = "donald@stufft.io"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "https://packaging.pypa.io/"
Source = "https://github.com/pypa/packaging"


[dependency-groups]
test = [
  "coverage[toml]>=5.0.0",
  "pip>=21.1",
  "pretend",
  "pytest>=6.2.0",
  "tomli; python_version<'3.11'",
  "tomli_w",
]
dev = [{ include-group = "test" }]


[tool.flit.sdist]
include = ["tests/", "docs/", "CHANGELOG.rst"]
exclude = ["docs/_build", "tests/manylinux/build-hello-world.sh", "tests/musllinux/build.sh", "tests/hello-world.c", "tests/__pycache__", "build/__pycache__"]

[tool.codespell]
ignore-words-list = [
    "dynamc",
    "notin"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abc.abstractmethod", "@abc.abstractproperty"]

[tool.pytest.ini_options]
minversion = "6.2"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]


[tool.mypy]
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unused_ignores = true
python_version = "3.8"

[[tool.mypy.overrides]]
module = ["_manylinux"]
ignore_missing_imports = true

[tool.ruff]
extend-exclude = [
    "src/packaging/licenses/_spdx.py"
]

[tool.ruff.lint]
extend-select = [
    "B",     # flake8-bugbear
    "E",
    "EXE",   # flake8-executable
    "F",
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "I",     # isort
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PGH",   # pygrep-hooks
    "PYI",   # flake8-pyi
    "RUF",   # Ruff-specific rules
    "SLOT",  # flake8-slots
    "T10",   # flake8-debugger
    "UP",    # pyupgrade
    "W",
    "YTT",   # flake8-2020
]
ignore = [
    "N818",  # exceptions must end in "*Error"
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["PYI024"]
"tasks/check.py" = ["UP032"]
"tests/test_requirements.py" = ["UP032"]
